Fix modal window flicker.
* Caused by a css animation when the window is hidden. The window scales
from 1 to 0 then immediately back to 1 in webkit browsers
resulting in a flicker just before the window disappears. Removed this
animation since there doesn't seem to be an easy way to synchronize
this with the hiding the parent window.

--- a/themes/default/media/css/less/styles.less
+++ b/themes/default/media/css/less/styles.less
@@ -1707,10 +1707,6 @@ div.modal-window {
    z-index: 2;
    overflow: hidden;
    width: 93.75%;
-    -moz-animation-duration: .2s;
-    -moz-animation-name: modalHide;
-    -webkit-animation-duration: .2s;
-    -webkit-animation-name: modalHide;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
@@ -1719,9 +1715,9 @@ div.modal-window {
 }
 
 .visible div.modal-window {
-    -moz-animation-duration: .2s;
+    -moz-animation-duration: .5s;
     -moz-animation-name: modalPop;
-    -webkit-animation-duration: .2s;
+    -webkit-animation-duration: .5s;
     -webkit-animation-name: modalPop;
 }
 
